Fixing : update style margin on mobile view

--- a/assets/style.css
+++ b/assets/style.css
@@ -463,6 +463,7 @@ sup {
         height: auto;
         display: block;
         padding: 3rem 0 5rem;
+        margin-top: 20%;
     }
     .content .content-box {
         padding: 0 1rem;
